--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "sass": "^1.45.0",
     "web-vitals": "^2.1.2"
   },
